# oottracker

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/: bizhawk-readme.txt  bootstrap.ps1  deploy-server-dev.ps1  deploy-server.ps1  oottracker-pj64-base.js  oottracker-web.service  oottracker.fenhl.net.nginx  release.ps1  release.sh  test-all.ps1  test-bizhawk.ps1  test-gui.ps1
assets/OoT Tracker.app/Contents/: Info.plist
assets/docs/: crates.md  restream.md
assets/graphql/: github-bizhawk-version.graphql  github-devr-version.graphql
assets/macos/OoT Tracker.app/Contents/: Info.plist
assets/macos/OoT Tracker.app/Contents/Resources/: AppIcon.icns
assets/wasm/: index.html
assets/web/: 404.html  500.html  index.html
assets/web/static/: common.css  light.css  proto.js
assets/web/static/img/: extra-images  extra-overlays  xopar-images  xopar-overlays
crate/ootr/: Cargo.toml
crate/ootr-dynamic/: Cargo.toml
crate/ootr-dynamic/src/: access.rs  lib.rs  region.rs  settings.rs
crate/ootr-static/: Cargo.toml
crate/ootr-static-derive/: Cargo.toml
crate/ootr-static-derive/src/: lib.rs
crate/ootr-static/src/: lib.rs
crate/ootr/src/: access.rs  check.rs  item.rs  lib.rs  model.rs  region.rs  settings.rs
crate/oottracker/: Cargo.toml
crate/oottracker-bizhawk/: Cargo.toml  build.rs
crate/oottracker-bizhawk/OotAutoTracker/src/: MainForm.cs  OotAutoTracker.csproj
crate/oottracker-bizhawk/OotAutoTracker/src/Properties/: Resources.Designer.cs
crate/oottracker-bizhawk/OotAutoTracker/src/Resources/: extra_images  extra_images_count  extra_images_dimmed  extra_images_overlay  extra_images_overlay_dimmed  xopar_images_count  xopar_images_dimmed  xopar_images_overlay  xopar_images_overlay_dimmed
crate/oottracker-bizhawk/assets/: README.txt
crate/oottracker-bizhawk/src/: lib.rs
crate/oottracker-csharp/: Cargo.toml  build.rs
crate/oottracker-csharp/src/: lib.rs
crate/oottracker-derive/: Cargo.toml
crate/oottracker-derive/src/: access.rs  flags.rs  item.rs  lib.rs  region.rs  settings.rs
crate/oottracker-gui/: Cargo.toml  build.rs
crate/oottracker-gui/src/: lang.rs  logic.rs  main.rs  save.rs  subscriptions.rs  tcp_server.rs
crate/oottracker-macos/: Cargo.toml
crate/oottracker-macos/OoT Tracker/: oottracker-bridge.h
crate/oottracker-macos/OoT Tracker/OoT Tracker/: ContentView.swift  OoT_TrackerApp.swift  ffi.swift
crate/oottracker-macos/OoT Tracker/OoT Tracker.xcodeproj/: project.pbxproj
crate/oottracker-macos/OoT Tracker/OoT Tracker.xcodeproj/project.xcworkspace/xcuserdata/fenhl.xcuserdatad/: UserInterfaceState.xcuserstate
crate/oottracker-macos/OoT Tracker/OoT Tracker.xcodeproj/xcuserdata/fenhl.xcuserdatad/xcschemes/: xcschememanagement.plist
crate/oottracker-macos/OoT Tracker/OoT Tracker/Assets.xcassets/AppIcon.appiconset/: Contents.json
crate/oottracker-macos/OoT Tracker/OoT Tracker/Assets.xcassets/eyeball_frog.imageset/: Contents.json
crate/oottracker-macos/src/: lib.rs
crate/oottracker-swift/: Cargo.toml  build.rs
crate/oottracker-swift/oottracker-swift.xcodeproj/: project.pbxproj
crate/oottracker-swift/oottracker-swift.xcodeproj/xcuserdata/fenhl.xcuserdatad/xcschemes/: xcschememanagement.plist
crate/oottracker-swift/src/: lib.rs
crate/oottracker-updater/: Cargo.toml
crate/oottracker-updater-bizhawk/: Cargo.toml
crate/oottracker-updater-bizhawk/src/: main.rs
crate/oottracker-updater/src/: main.rs
crate/oottracker-utils/: Cargo.toml
crate/oottracker-utils/src/: check_bizhawk_version.rs  format_ram.rs  github.rs  lib.rs  release.rs  version.rs  version_bump.rs
crate/oottracker-web/: Cargo.toml
crate/oottracker-web/src/: http.rs  main.rs  mw.rs  restream.rs  websocket.rs
crate/oottracker/src/: access.rs  check.rs  checks.rs  ctx.rs  event_chk_inf.rs  firebase.rs  github.rs  info_tables.rs  item.rs  item_ids.rs  knowledge.rs  lib.rs  model.rs  net.rs  proto.rs  ram.rs  rando_info.rs  region.rs  save.rs  scene.rs  scene_flags.rs  settings.rs  text.rs  ui.rs  websocket.rs
