[workspace]
members = ["crate/*"]
default-members = ["crate/oottracker"] #TODO change to CLI?
resolver = "2"

[patch.crates-io.darwin-libproc] # see https://github.com/heim-rs/darwin-libproc/pull/3 for details
git = "https://github.com/Orycterope/darwin-libproc"
branch = "dependencies_versions"

[profile.release]
lto = "fat"
strip = true
