[package]
name = "ootr-dynamic"
version = "0.6.2"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[dependencies]
itertools = "0.10"
lazy-regex = "2"
pyo3 = "0.15"
semver = "1"
serde_json = "1"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.ootr]
path = "../ootr"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
default-features = false
