[package]
name = "ootr-dynamic"
version = "0.7.4"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[dependencies]
itertools = "0.10"
pyo3 = "0.19"
semver = "1"
serde_json = "1"

[dependencies.ootr]
path = "../ootr"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
default-features = false
