[package]
name = "ootr-static-derive"
version = "0.6.1"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.4"
proc-macro2 = "1"
quote = "1"
syn = "1"

[dependencies.ootr]
path = "../ootr"

[dependencies.ootr-dynamic]
path = "../ootr-dynamic"

[dependencies.quote-value]
git = "https://github.com/fenhl/quote-value" #TODO publish
branch = "main"
