[package]
name = "ootr-static-derive"
version = "0.6.3"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.4"
directories = "4"
graphql_client = "0.10"
itertools = "0.10"
proc-macro2 = "1"
quote = "1"
serde = "1"
syn = "1"
zip = "0.5"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.ootr]
path = "../ootr"

[dependencies.ootr-dynamic]
path = "../ootr-dynamic"

[dependencies.pyo3]
version = "0.15"
features = ["auto-initialize"]

[dependencies.quote-value]
git = "https://github.com/fenhl/quote-value" #TODO publish
branch = "main"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "json", "rustls-tls", "trust-dns"]
