[package]
name = "ootr-static"
version = "0.6.1"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[dependencies]
once_cell = "1"
semver = "1"
tokio = "1"

[dependencies.async-proto]
version = "0.8"
features = ["write-sync"]

[dependencies.ootr]
path = "../ootr"

[dependencies.ootr-static-derive]
path = "../ootr-static-derive"
