[package]
name = "ootr"
version = "0.6.1"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[dependencies]
async-proto = "0.8"
derivative = "2"
itertools = "0.10"
semver = "1"

[dependencies.enum-iterator]
git = "https://github.com/dasgefolge/enum-iterator"
branch = "fields"

[dependencies.quote-value]
git = "https://github.com/fenhl/quote-value" #TODO publish
branch = "main"
