[package]
name = "ootr"
version = "0.7.4"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[dependencies]
async-proto = "0.16"
enum-iterator = "1"
semver = "1"
serde_plain = "1"

[dependencies.quote-value]
git = "https://github.com/fenhl/quote-value" #TODO publish
branch = "main"

[dependencies.serde]
version = "1"
features = ["derive"]
