[package]
name = "oottracker-bizhawk"
version = "0.7.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[build-dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"

[dependencies]
semver = "1"

[dependencies.winver]
git = "https://github.com/fenhl/winver"
branch = "main"
