[package]
name = "oottracker-csharp"
version = "0.6.3"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[lib]
name = "oottracker"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10"
libc = "0.2"
semver = "1"

[dependencies.async-proto]
version = "0.9"
features = ["write-sync"]

[dependencies.oottracker]
path = "../oottracker"
