[package]
name = "oottracker-csharp"
version = "0.7.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[lib]
name = "oottracker"
crate-type = ["cdylib"]

[build-dependencies.winver]
git = "https://github.com/fenhl/winver"
branch = "main"

[dependencies]
itertools = "0.10"
libc = "0.2"
semver = "1"

[dependencies.async-proto]
version = "0.10"
features = ["write-sync"]

[dependencies.oottracker]
path = "../oottracker"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "rustls-tls", "trust-dns"]


[dependencies.winver]
git = "https://github.com/fenhl/winver"
branch = "main"
