[package]
name = "oottracker-csharp"
version = "0.7.4"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[lib]
name = "oottracker"
crate-type = ["cdylib"]

[build-dependencies.winver]
git = "https://github.com/fenhl/winver"
branch = "main"

[dependencies]
async-proto = "0.16"
itertools = "0.10"
libc = "0.2"
semver = "1"

[dependencies.oottracker]
path = "../oottracker"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "rustls-tls"]


[dependencies.winver]
git = "https://github.com/fenhl/winver"
branch = "main"
