[package]
name = "oottracker-gui"
version = "0.4.3"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
async-proto = "0.7"
derivative = "2"
futures = "0.3"
image = "0.23"
itertools = "0.10"
num-traits = "0.2"
smart-default = "0.6"
url = "2"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.enum-iterator]
git = "https://github.com/dasgefolge/enum-iterator"
branch = "fields"

[dependencies.iced]
git = "https://github.com/hecrj/iced" #TODO go back to the version on crates.io once it's compatible with tokio 1
rev = "5fc4210270852d8d633a63168d8a166a235236c6"
features = ["image", "tokio"]

[dependencies.iced_futures]
git = "https://github.com/hecrj/iced" #TODO go back to the version on crates.io once it's compatible with tokio 1
rev = "5fc4210270852d8d633a63168d8a166a235236c6"

[dependencies.iced_native]
git = "https://github.com/hecrj/iced" #TODO go back to the version on crates.io once it's compatible with tokio 1
rev = "5fc4210270852d8d633a63168d8a166a235236c6"

[dependencies.ootr]
path = "../ootr"

[dependencies.ootr-static]
path = "../ootr-static"

[dependencies.oottracker]
path = "../oottracker"

[dependencies.reqwest]
version = "0.11"
default-features = false

[dependencies.structopt]
version = "0.3"
features = ["paw"]

[dependencies.tokio]
version = "1"
features = ["fs", "io-util", "net"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
default-features = false
