[package]
name = "oottracker-gui"
version = "0.6.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
async-proto = "0.7"
derivative = "2"
futures = "0.3"
iced_futures = "0.3"
iced_native = "0.4"
image = "0.23"
itertools = "0.10"
num-traits = "0.2"
semver = "0.11"
smart-default = "0.6"
url = "2"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.enum-iterator]
git = "https://github.com/dasgefolge/enum-iterator"
branch = "fields"

[dependencies.iced]
version = "0.3"
features = ["image", "tokio"]

[dependencies.ootr]
path = "../ootr"

[dependencies.ootr-static]
path = "../ootr-static"

[dependencies.oottracker]
path = "../oottracker"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "stream", "trust-dns"]

[dependencies.structopt]
version = "0.3"
features = ["paw"]

[dependencies.tokio]
version = "1"
features = ["fs", "io-util", "net", "time"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
default-features = false
