[package]
name = "oottracker-gui"
version = "0.7.4"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
async-proto = "0.15"
derivative = "2"
enum-iterator = "1"
futures = "0.3"
iced_futures = "0.4"
iced_native = "0.5"
image = "0.24"
itertools = "0.10"
semver = "1"
url = "2"

[dependencies.clap]
version = "3"
features = ["derive"]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.iced]
version = "0.4"
features = ["image", "tokio"]

[dependencies.ootr]
path = "../ootr"

[dependencies.ootr-static]
path = "../ootr-static"

[dependencies.oottracker]
path = "../oottracker"
features = ["embed-images", "firebase"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "stream"]

[dependencies.tokio]
version = "1"
features = ["fs", "io-util", "net", "time"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
default-features = false
