[package]
name = "oottracker-updater-bizhawk"
version = "0.7.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[dependencies]
async_zip = "0.0.3"
bytes = "1"
futures = "0.3"
image = "0.23"
itertools = "0.10"
open = "2"
semver = "1"

[dependencies.clap]
version = "3"
features = ["derive"]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.heim]
git = "https://github.com/heim-rs/heim" # https://github.com/heim-rs/heim/issues/322
default-features = false
features = ["process"]

[dependencies.iced]
version = "0.3"
features = ["image", "tokio"]

[dependencies.oottracker]
path = "../oottracker"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "stream"]

[dependencies.tokio]
version = "1"
features = ["time"]

[dependencies.tokio-util]
version = "0.6"
features = ["io"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"

[dependencies.windows]
version = "0.28"
features = ["Win32_Foundation", "Win32_Storage_FileSystem", "std"]
