[package]
name = "oottracker-updater"
version = "0.6.4"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[dependencies]
image = "0.23"
itertools = "0.10"
tokio-stream = "0.1"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.iced]
version = "0.3"
features = ["image", "tokio"]

[dependencies.oottracker]
path = "../oottracker"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "stream"]

[dependencies.structopt]
version = "0.3"
features = ["paw"]

[dependencies.tokio]
version = "1"
features = ["fs", "time"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
