[package]
name = "oottracker-updater"
version = "0.7.3"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[dependencies]
image = "0.23"
itertools = "0.10"
open = "2"
tokio-stream = "0.1"

[dependencies.clap]
version = "3"
features = ["derive"]

[dependencies.iced]
version = "0.3"
features = ["image", "tokio"]

[dependencies.oottracker]
path = "../oottracker"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "stream"]

[dependencies.tokio]
version = "1"
features = ["time"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
