[package]
name = "oottracker-utils"
version = "0.7.1"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[[bin]]
name = "oottracker-format-ram"
path = "src/format_ram.rs"

[[bin]]
name = "oottracker-release"
path = "src/release.rs"

[[bin]]
name = "oottracker-version-bump"
path = "src/version_bump.rs"

[dependencies]
async-trait = "0.1"

[dependencies.clap]
version = "3"
features = ["derive"]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.tokio]
version = "1"
features = ["fs", "io-util", "macros", "process", "rt-multi-thread"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"

[target.'cfg(windows)'.dependencies]
#dir-lock = "0.3" #TODO release new version once new heim version is released
graphql_client = "0.10"
itertools = "0.10"
lazy-regex = "2"
plist = "1"
serde_json = "1"
tempfile = "3"
toml_edit = "0.8"
zip = "0.5"

[target.'cfg(windows)'.dependencies.dir-lock]
git = "https://github.com/fenhl/rust-dir-lock"
branch = "main"

[target.'cfg(windows)'.dependencies.ootr]
path = "../ootr"

[target.'cfg(windows)'.dependencies.ootr-dynamic]
path = "../ootr-dynamic"

[target.'cfg(windows)'.dependencies.ootr-static]
path = "../ootr-static"

[target.'cfg(windows)'.dependencies.oottracker]
path = "../oottracker"

[target.'cfg(windows)'.dependencies.oottracker-bizhawk]
path = "../oottracker-bizhawk"

#[target.'cfg(windows)'.dependencies.oottracker-csharp] #TODO
#path = "../oottracker-csharp"

[target.'cfg(windows)'.dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "trust-dns"]

[target.'cfg(windows)'.dependencies.semver]
version = "1"
features = ["serde"]

[target.'cfg(windows)'.dependencies.serde]
version = "1"
features = ["derive"]
