[package]
name = "oottracker-web"
version = "0.7.4"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[dependencies]
futures = "0.3"
iced_core = "0.5"
lazy-regex = "2"
rocket = "0.5.0-rc.2"
serde_json = "1"
warp = "0.3"

[dependencies.async-proto]
version = "0.15"
features = ["warp"]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.ootr]
path = "../ootr"

[dependencies.oottracker]
path = "../oottracker"
features = ["rocket"]

[dependencies.rocket-util]
git = "https://github.com/fenhl/rocket-util"
branch = "main"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["json", "macros", "postgres", "runtime-tokio-rustls"]

[dependencies.tokio]
version = "1"
features = ["sync"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
features = ["rocket-beta"]
