[package]
name = "oottracker-web"
version = "0.7.4"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[dependencies]
futures = "0.3"
iced_core = "0.5"
itertools = "0.13"
lazy-regex = "3"
rocket = "0.5"
rocket_ws = "0.1"
serde_json = "1"
thiserror = "1"
tokio-tungstenite = "0.21"

[dependencies.async-proto]
version = "0.23"
features = ["tokio-tungstenite"]

[dependencies.derive_more]
version = "1"
features = ["from"]

[dependencies.ootr]
path = "../ootr"

[dependencies.ootr-utils]
git = "https://github.com/midoshouse/rust-ootr-utils"
branch = "main"

[dependencies.oottracker]
path = "../oottracker"
features = ["iced", "rocket"]

[dependencies.rocket-util]
git = "https://github.com/fenhl/rocket-util"
branch = "main"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["json", "macros", "postgres", "runtime-tokio-rustls"]

[dependencies.tokio]
version = "1"
features = ["macros", "process", "sync", "time"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
features = ["rocket"]
