[package]
name = "oottracker"
version = "0.7.4"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[features]
embed-images = ["once_cell"]
rocket = ["dep:rocket", "dep:rocket-util"]

[dependencies]
async-stream = "0.3"
bitflags = "1"
byteorder = "1"
collect-mac = "0.1"
derivative = "2"
directories = "4"
enum-iterator = "1"
futures = "0.3"
image = "0.24"
itertools = "0.10"
semver = "1"
serde_json = "1"

[dependencies.async-proto]
version = "0.16"
features = ["serde_json", "tokio-tungstenite"]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.iced]
version = "0.4"
features = ["image"]
optional = true

[dependencies.once_cell]
version = "1"
optional = true

[dependencies.ootr]
path = "../ootr"

[dependencies.oottracker-derive]
path = "../oottracker-derive"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "json", "rustls-tls"]

[dependencies.rocket]
version = "0.5.0-rc.2"
optional = true

[dependencies.rocket-util]
git = "https://github.com/fenhl/rocket-util"
branch = "main"
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["fs", "io-util", "net", "sync", "time"]

[dependencies.tokio-stream]
version = "0.1"
features = ["net"]

[dependencies.tokio-tungstenite]
version = "0.20"
features = ["rustls-tls-webpki-roots"]

[dependencies.url]
version = "2"
features = ["serde"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
default-features = false
