[package]
name = "oottracker"
version = "0.7.4"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[features]
rocket = ["dep:rocket", "dep:rocket-util"]

[dependencies]
async-stream = "0.3"
bitflags = "2"
byteorder = "1"
collect-mac = "0.1"
derivative = "2"
directories = "5"
enum-iterator = "2"
futures = "0.3"
image = "0.25"
itertools = "0.13"
semver = "1"
serde_json = "1"

[dependencies.async-proto]
version = "0.22"
features = ["serde_json", "tokio-tungstenite"]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.iced]
version = "0.4"
features = ["image"]
optional = true

[dependencies.ootr]
path = "../ootr"

[dependencies.oottracker-derive]
path = "../oottracker-derive"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["blocking", "charset", "http2", "json", "macos-system-configuration", "rustls-tls"]

[dependencies.rocket]
version = "0.5"
optional = true

[dependencies.rocket-util]
git = "https://github.com/fenhl/rocket-util"
branch = "main"
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["fs", "io-util", "net", "sync", "time"]

[dependencies.tokio-stream]
version = "0.1"
features = ["net"]

[dependencies.tokio-tungstenite]
version = "0.21"
features = ["rustls-tls-webpki-roots"]

[dependencies.url]
version = "2"
features = ["serde"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
default-features = false
